Fix: resolve layout issues on small screens

--- a/styles/solar-solutions.css
+++ b/styles/solar-solutions.css
@@ -43,7 +43,7 @@
   display: flex;
   width: 22.4375rem;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   background: #fff;
   box-shadow: 0rem .25rem 1.875rem 0rem rgba(0, 0, 0, 0.05);
 }
@@ -74,10 +74,8 @@
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5rem;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
   line-clamp: 3;
+	min-height: 120px;
   text-overflow: ellipsis;
 }
 
